# lapl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: publish.yml
benches/: spectral_scaling.rs
examples/: README.md  spectral_rmt.rs
src/: lib.rs  sparse.rs
tests/: rosetta_lapl.rs  spectral_oracle.rs
tests/fixtures/rosetta/: gen_lapl.py  lapl_spectral.json
